[package]
name = "links"
version = "0.1.0"
edition = "2021"

[dependencies]
log = "0.4"
markdown = "0.3"
serde = "1.0"
serde_derive = "1.0"
stylist = { version = "0.12", features = ["yew_integration"] }
toml = "0.7"
wasm-logger = "0.2"
yew = { version = "0.20", features = ["csr"] }
yew-router = "0.17"
